--- a/index.html
+++ b/index.html
@@ -25,7 +25,10 @@
             <div id="game-board"></div>
             <div id="game-over-screen" class="hidden">
                 <h2>ゲームオーバー</h2>
-                <button id="retry-btn">もう一度</button>
+                <div class="game-over-buttons">
+                    <button id="game-over-undo-btn">最後の手に戻る</button>
+                    <button id="retry-btn">もう一度</button>
+                </div>
             </div>
         </div>
 
